--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,50 @@
 [project]
 name = "rag-database"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "google-genai>=1.47.0",
+    "langchain-text-splitters>=1.0.0",
+    "ollama>=0.6.0",
     "polars>=1.32.3",
-    "tiktoken>=0.11.0",
+    "transformers>=4.57.1",
     "numpy>=2.3.2",
     "openai>=1.101.0"
 ]
 
-[tool.mypy]
-python_version = "3.12"
-python_executable = ".venv/bin/python"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+[tool.ruff]
+target-version = "py312"
+respect-gitignore = true
+line-length = 135
+
+[tool.ruff.lint]
+select = [
+  "E",   # pycodestyle errors
+  "F",   # pyflakes
+  "I",   # isort
+  "B",   # bugbear
+  "C4",  # comprehensions
+  "TCH", # type-checking hygiene
+  "SIM", # simplify
+  "ANN", # type hints
+  "ARG", # unused arguments
+  "RUF"  # Ruff-native rules
+]
+ignore = [
+  "RUF100",
+  "B904"
+]
+
+[tool.ruff.lint.isort]
+force-sort-within-sections = true
+section-order = ["standard-library", "third-party", "first-party", "local-folder"]
+
+# Enables Ruff formatter with default options (Black-compatible)
+[tool.ruff.format]
