--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/rag_database"] 
 
 [tool.ruff]
 target-version = "py312"
