feat(rag-db): Simplify embedding model using litellm wrapper

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "langchain-text-splitters>=1.0.0",
     "ollama>=0.6.0",
     "polars>=1.32.3",
+    "llm-baseclient @ git+ssh://git@github.com/patrickab/llm-baseclient.git@main",
     "rich>=14.2.0",
     "transformers>=4.57.1",
     "numpy>=2.3.2",
@@ -19,6 +20,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/rag_database"] 
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.ruff]
 target-version = "py312"
